--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ UHF/obj/Debug/110/demo_uhf_uart.csproj.AssemblyReference.cache
 UHF/obj/Debug/110/designtime/build.props
 UHF/obj/Debug/110/DesignTimeResolveAssemblyReferencesInput.cache
 UHF/obj/Debug/110/libraryprojectimports.cache
+.vs/UHF/FileContentIndex/b697dd04-c76e-4361-b761-29a8fcbd061e.vsidx
+UHF/obj/Debug/110/demo_uhf_uart.csproj.AssemblyReference.cache
+UHF/obj/Debug/110/designtime/build.props
+UHF/obj/Debug/110/DesignTimeResolveAssemblyReferencesInput.cache
+UHF/obj/Debug/110/libraryprojectimports.cache
